# pyBasin

./: .env  .gitignore  404.html  ASBasinStabilityEstimator.py  BasinStabilityEstimator.py  ClusterClassifier.py  FeatureExtractor.py  LICENSE  MIGRATION.md  MIGRATION_COMPLETE.md  ODESystem.py  Pipfile  Plotter.py  README.md  ROADMAP.md  Sampler.py  Solution.py  Solver.py  TensorIndecesExample.py  duffing_oscillator_case.py  execution_time.txt  index.html  main.py  main_duffing_oscillator_case.py  main_lorenz.py  main_pendulum_case1.py  main_pendulum_case2.py  mkdocs.yml  objects.inv  pendulum_case1.py  pendulum_case1_pytorch.py  pyproject.toml  pyrightconfig.json  pytest.ini  test.py  test_file.py  test_gpu_performance.py  test_ode.py  test_parallel_as.py  test_sklearn_solver.py  (+2 more)
.github/: copilot-instructions.md
.github/prompts/: pybasin_docs_writer.prompt.md
api/adaptive-sampling/: index.html
api/basin-stability-estimator/: index.html
api/basin-stability-study/: index.html
api/feature-extractors/: index.html
api/feature-selector/: index.html
api/parameter-studies/: index.html
api/plotters/: index.html
api/predictors/: index.html
api/samplers/: index.html
api/solution/: index.html
api/solvers/: index.html
api/template-integrator/: index.html
api/torch-feature-calculators/: index.html
artifacts/: .gitignore
artifacts/results/: duffing_case1_comparison.json  duffing_case2_comparison.json  duffing_defaults_comparison.json  friction_case1_comparison.json  friction_case2_comparison.json  friction_defaults_comparison.json  lorenz_case1_comparison.json  lorenz_case2_comparison.json  lorenz_case3_comparison.json  lorenz_case4_comparison.json  lorenz_defaults_comparison.json  pendulum_case1_comparison.json  pendulum_case2_comparison.json  pendulum_case3_comparison.json  pendulum_defaults_comparison.json  rossler_network_baseline_comparison.json  rossler_network_k_sweep_comparison.json
benchmarks/: __init__.py  batch_benchmark_results.csv  benchmark_change_quantiles_batched.py  benchmark_jax_features_timing.py  benchmark_jax_lyapunov.py  benchmark_jax_pendulum.py  benchmark_jax_tsfresh.md  benchmark_jax_vs_tsfresh_features_timing.py  benchmark_lyap_e.py  benchmark_lyap_r.py  benchmark_nolds_features.py  benchmark_pendulum_solvers.py  benchmark_pendulum_templates.py  benchmark_pendulum_tsfresh.py  benchmark_sklearn_solver.py  benchmark_torch_features_timing.py  benchmark_torch_gpu_usage.py  individual_benchmark_results.csv  jax_vs_tsfresh_individual_multiprocessing.csv  jax_vs_tsfresh_individual_serial.csv  pyrightconfig.json  results.md  utils.py
benchmarks/basin-stability-estimator/: index.html
benchmarks/end-to-end/: index.html
benchmarks/end_to_end/: Manifest.toml  Project.toml  benchmark_basin_stability_estimator.py  benchmark_julia_attractors.jl  benchmark_pynamicalsys.py  compare_all.py  compare_matlab_vs_python.py
benchmarks/feature-extraction/: index.html
benchmarks/feature_extraction/: benchmark_change_quantiles_batched.py  benchmark_jax_lyap_e.py  benchmark_jax_lyap_r.py  benchmark_jax_vs_tsfresh_features_timing.py  benchmark_torch_feature_extraction_gpu_usage.py  benchmark_torch_features_timing.py
benchmarks/overview/: index.html
benchmarks/profiling/: profiling_pendulum_case1_with_defaults.py
case_friction/: FrictionFeatureExtractor.py  FrictionODE.py  main_friction.py  main_friction_v_study.py  setup_friction_system.py
case_studies/: README.md  __init__.py  comparison_utils.py  run_case_studies_dynamical_clusterer.py  run_case_studies_with_defaults.py
case_study_duffing_oscillator/: DuffingFeatureExtractor.py  DuffingODE.py  main_duffing_oscillator_case.py  main_duffing_oscillator_supervised.py  setup_duffing_oscillator_system.py
case_study_lorenz/: LorenzODE.py  main_lorenz.py  main_lorenz_hyperpN.py  main_lorenz_sigma.py  setup_lorenz_system.py
case_study_pendulum/: PendulumODE.py  main_pendulum_T_0_01.ipynb  main_pendulum_T_0_01.py  main_pendulum_case1.py  main_pendulum_case2.py  setup_pendulum_system.py
docs/: index.md  macros.py
experiments/: experiment_hierarchical_clustering.py  experiment_parameter_batching.py  experiment_periodic_features.py  experiment_tsfresh_extractor.py  experiment_unsupervised_clustering.py  jax_lorenz_event_stop.py  jax_lorenz_results.json  nolds_dimension_features.py  test_per_state_features.py  test_tsfresh_extractor.py  torchdiffeq_lorenz_results.json  tsfresh_feature_filtering_experiment.py
hooks/: index.html
javascripts/: mathjax.js
macros/: index.html  macros.py
planning/: CURRENT_FEATURE_EXTRACTORS.md  DOCUMENTATION_PLAN.md  FEATURE_EXTRACTORS_SUGGUESTIONS.md  FEATURE_EXTRACTOR_DESIGN.md  MULTI_PARAMETER_STUDY_PROPOSAL.md  PARAMETER_BATCHING.md  TSFRESH.md  batched_features_vmap_plan.md  tsfel_features_by_domain.md
prompts/: jax_safe.md  rossler.md  sklearn_estimator.md
pyBasin/: ASBasinStabilityEstimator.py  BasinStabilityEstimator.py  ClusterClassifier.py  FeatureExtractor.py  ODESystem.py  Plotter.py  Sampler.py  Solver.py  setup.py  types.py  utils.py
pybasin/: ASBasinStabilityEstimator.py  ASPlotter.py  BasinStabilityEstimator.py  FeatureExtractor.py  ODESystem.py  Plotter.py  Solution.py  Solver.py  __init__.py  setup.py  types.py
scripts/: ci.sh  docs_check.sh  docs_deploy.sh  docs_serve.sh  generate_benchmark_plots.sh  generate_case_studies_defaults.sh  generate_ground_truths.py  generate_profiling.sh  quick_reference.sh  run_all_case_studies.sh  verify_migration.py
search/: search_index.json
tests/: conftest.py  test_basin_stability.py
thesis_utils/: thesis_matplotlib_plotter.py
(+606 files in other folders)
