[project]
name = "pybasin"
version = "0.1.0"
description = "Basin stability estimation for dynamical systems"
authors = [{ name = "Adrian Wix", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
keywords = [
    "dynamical systems",
    "basin stability",
    "nonlinear dynamics",
    "attractors",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchdiffeq>=0.2.0",
    "pandas>=2.0.0",
    "packaging>=23.0",
    "torchode>=1.0.0",
    "jax[cuda12]>=0.8.0",
    "diffrax>=0.7.0",
    "scipy-stubs>=1.16.3.0",
    "microsoft-python-type-stubs",
    "tsfresh>=0.21.1",
    "nolds>=0.6.2",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-mantine-components>=0.14.0",
    "hdbscan>=0.8.40",
    "jaxtyping>=0.3.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0", "pyright>=1.1.0"]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
]
case-studies = ["jupyter>=1.0.0", "openpyxl>=3.1.0", "notebook>=7.0.0"]
all = ["pybasin[dev,docs,case-studies]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pybasin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable linting rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PLC0415", # import-outside-toplevel (from Pylint via Ruff)
]
ignore = ["E501"] # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
"benchmarks/*.py" = [
    "E402",
] # Allow module level imports after code for environment setup
"src/pybasin/feature_extractors/correlation_selector.py" = [
    "N803",
] # X is standard for sklearn-compatible transformers
"src/pybasin/ts_torch/torch_batched_calculators.py" = [
    "N806",
] # V, VtV, Vtv are standard mathematical notation
"src/pybasin/ts_torch/calculators/*.py" = [
    "N806",
] # V, VtV, Vtv are standard mathematical notation
"src/pybasin/predictors/*.py" = [
    "N803",
    "N806",
] # X is standard for sklearn-compatible estimators
"tests/*.py" = [
    "N803",
    "N806",
] # X, y, X_train, X_test are standard ML conventions

[tool.ruff.format]
# Use Ruff's formatter (similar to Black)
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.vulture]
ignore_decorators = ["@callback", "@app.callback", "@self.app.callback"]
ignore_names = ["render", "layout"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "vulture>=2.14",
]
